--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "devDependencies": {
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
-    "flowbite": "^1.7.0"
+    "flowbite": "^1.7.0",
+    "gsap": "^3.12.2"
   }
 }
